Fixing right alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -23,9 +23,8 @@
         }
 
         &-right {
-            left: 100%;
+            right: 0%;
             transform: translate(-100%, -50%);
-            width: 50%;
         }
 
         &-center {
